---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 00.03.2025
  Features:
    - [space-age] Made it possible to craft all my items in an Elctromagnetic Plant.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.
    - Improved tips description on some mods.
  Modding:
    - Fixed missing item in roboport recipe (boblogiostics).
    - Added item to armour recipes (bobplate, bobenemies).
    - bob- Prefix Crashing with beta (11.03.25).
  Bugfixes:
    - Crashes with bobs in general. (11.03.25).
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 04.03.2025
  Features:
    - Repeatable migrations.
    - Added all the old chat popups to tips & tricks. some teext changes may happen as the mods updates.  
  Changes:
    - Achivement name change [Surviving planet destruction] --> [Leviathan]
    - Control stage code are deleted, no longer in use/needed.
    - Deleted setting(s) regarding the old chat popup.
    - Bobs & [space-age] bridge is moved to Alt Chemical Processing. 
    - If you are currently playing Bobs and PA&R please use that mod to restore the merge of items in recipes.
    - Items in the bridge are as followes: ["bob-carbon"] = "carbon". ["bob-tungsten-plate"] = "tungsten-plate". ["bob-tungsten-carbide"] = "tungsten-carbide". ["bob-lithium"] = "lithium-plate". ["seedling"] = "tree-seed". ["bob-salt"] = "salt", from "SaltedFish" if mods["SaltedFish"].
  Bugfixes:
    - Mistakenly disabled turbo loaders from Vanilla Loader should only happen if using boblogistics.
  Info:
    - [space-age] Heavily recommend using "reverse-factory" For more info read mod page.