@@ -1,14 +1,21 @@
 {
 	"item":[
+		["advanced-logistic-science-pack", "bob-advanced-logistic-science-pack"],
+		["basic-electronic-components", "bob-basic-electronic-components"],
+		["basic-circuit-board", "bob-basic-circuit-board"],
+		["sodium-perchlorate", "bob-sodium-perchlorate"],
+        ["heat-shield-tile", "bob-heat-shield-tile"],
+		["sodium-chlorate", "bob-sodium-chlorate"],
+		["phenolic-board", "bob-phenolic-board"],
+		["wooden-board", "bob-wooden-board"],
+        ["solder-alloy", "bob-solder-alloy"],
+		["limestone", "bob-limestone"],
         ["solder", "bob-solder"],
         ["rtg", "bob-rtg"],
-        ["heat-shield-tile", "bob-heat-shield-tile"],
 		["mech-brain", "bob-mech-brain"],
 		["heat-pipe-4", "bob-heat-pipe-4"],
 		["heat-pipe-3", "bob-heat-pipe-3"],
 		["heat-pipe-2", "bob-heat-pipe-2"],
-		["basic-circuit-board", "bob-basic-circuit-board"],
-		["advanced-logistic-science-pack", "bob-advanced-logistic-science-pack"],
 		["alien-artifact", "bob-alien-artifact"],
 		["alien-artifact-red", "bob-alien-artifact-red"],
 		["alien-artifact-orange","bob-alien-artifact-orange"],
@@ -19,5 +26,8 @@
     ],
 	"technology":[
         ["heat-shield", "bob-heat-shield"]
+    ],
+	"entity":[
+        ["reinforced-wall", "bob-reinforced-wall"]
     ]
 }
