@@ -2,6 +2,6 @@
 0.1.47.json
 0.2.0.json
 0.3.8.json
-Bobs-0.3.18.json
-0.3.18-repatable.json
-0.3.18-repatable.lua
+Bobs-0.3.19.json
+0.3.19-repatable.json
+0.3.19-repatable.lua
